fix(add other button)

--- a/src/components/Button.mdx
+++ b/src/components/Button.mdx
@@ -18,6 +18,7 @@ import { Playground, PropsTable } from 'docz'
  <Button type="info">Button Info</Button>
  <Button type="success">Button Success</Button>
  <Button type="default">Button Default</Button>
+ <Button outline={true}>Button Primary Outline</Button> 
 </Playground>
 
 ## Outline
